objects/ssot__SuggestedAssessmentReason__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Suggested Assessment Reason Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryAsmtQuestionResponseId__c</fullName>
        <label>PrimaryAsmtQuestionResponse</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryAssessmentId__c</fullName>
        <label>PrimaryAssessment</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SuggestedAssessmentDefId__c</fullName>
        <label>SuggestedAssessmentDef</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SuggestionSourceType__c</fullName>
        <label>SuggestionSourceType</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291281069_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SuggestedAssessmentReason_PrimaryAss_rel</label>
        <referenceTo>ssot__Assessment__dlm</referenceTo>
        <relationshipLabel>SuggestedAssessmentReason_PrimaryAss_rel</relationshipLabel>
        <relationshipName>rel_1720291281069_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291812682_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SuggestedAssessmentReason_PrimaryAsm_rel</label>
        <referenceTo>ssot__AssessmentQuestionResponse__dlm</referenceTo>
        <relationshipLabel>SuggestedAssessmentReason_PrimaryAsm_rel</relationshipLabel>
        <relationshipName>rel_1720291812682_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291855406_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SuggestedAssessmentReason_SuggestedA_rel</label>
        <referenceTo>ssot__SuggestedAssessmentDefinition__dlm</referenceTo>
        <relationshipLabel>SuggestedAssessmentReason_SuggestedA_rel</relationshipLabel>
        <relationshipName>rel_1720291855406_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>